# roots-template

./: CMakeLists.txt  README.md
src/roots/: main.cpp  roots.hpp
tests/: test_binary.cpp  test_roots.cpp
